--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -96,7 +96,7 @@
 }
 </style>
 
-<div class="page-width" style="padding: 3rem 0;">
+<div class="page-width" style="padding: 3rem 3rem;">
     <h2 class="section-heading">{{ section.settings.heading }}</h2>
 
     <div class="team-cards-row">
