changed width from % to PX

--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -220,10 +220,10 @@
     {
       "type": "range",
       "id": "image_width",
-      "min": 20,
-      "max": 100,
+      "min": 100,
+      "max": 400,
       "step": 5,
-      "unit": "%",
+      "unit": "px",
       "label": "Image Width (%)",
       "default": 100
     },
